@@ -16,6 +16,15 @@ comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or mor
 end_comment
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -40,15 +49,6 @@ operator|.
 name|Term
 import|;
 end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
 begin_comment
 comment|/** Subclass of FilteredTermEnum for enumerating all terms that are similar  * to the specified filter term.  *  *<p>Term enumerations are always ordered by Term.compareTo().  Each term in  * the enumeration is greater than all that precede it.  */
 end_comment
@@ -61,21 +61,16 @@ name|FuzzyTermEnum
 extends|extends
 name|FilteredTermEnum
 block|{
-comment|/* This should be somewhere around the average long word.    * If it is longer, we waste time and space. If it is shorter, we waste a    * little bit of time growing the array as we encounter longer words.    */
-DECL|field|TYPICAL_LONGEST_WORD_IN_INDEX
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|TYPICAL_LONGEST_WORD_IN_INDEX
-init|=
-literal|19
-decl_stmt|;
 comment|/* Allows us save time required to create a new array    * every time similarity is called.    */
-DECL|field|d
+DECL|field|p
 specifier|private
 name|int
 index|[]
+name|p
+decl_stmt|;
+DECL|field|d
+specifier|private
+name|int
 index|[]
 name|d
 decl_stmt|;
@@ -127,19 +122,6 @@ specifier|private
 specifier|final
 name|float
 name|scale_factor
-decl_stmt|;
-DECL|field|maxDistances
-specifier|private
-specifier|final
-name|int
-index|[]
-name|maxDistances
-init|=
-operator|new
-name|int
-index|[
-name|TYPICAL_LONGEST_WORD_IN_INDEX
-index|]
 decl_stmt|;
 comment|/**    * Creates a FuzzyTermEnum with an empty prefix and a minSimilarity of 0.5f.    *<p>    * After calling the constructor the enumeration is already pointing to the first     * valid term if such a term exists.     *     * @param reader    * @param term    * @throws IOException    * @see #FuzzyTermEnum(IndexReader, Term, float, int)    */
 DECL|method|FuzzyTermEnum
@@ -356,15 +338,39 @@ argument_list|,
 name|realPrefixLength
 argument_list|)
 expr_stmt|;
-name|initializeMaxDistances
+name|this
+operator|.
+name|p
+operator|=
+operator|new
+name|int
+index|[
+name|this
+operator|.
+name|text
+operator|.
+name|length
 argument_list|()
+operator|+
+literal|1
+index|]
 expr_stmt|;
 name|this
 operator|.
 name|d
 operator|=
-name|initDistanceArray
+operator|new
+name|int
+index|[
+name|this
+operator|.
+name|text
+operator|.
+name|length
 argument_list|()
+operator|+
+literal|1
+index|]
 expr_stmt|;
 name|setEnum
 argument_list|(
@@ -459,6 +465,7 @@ return|return
 literal|false
 return|;
 block|}
+comment|/** {@inheritDoc} */
 DECL|method|difference
 specifier|public
 specifier|final
@@ -467,10 +474,6 @@ name|difference
 parameter_list|()
 block|{
 return|return
-call|(
-name|float
-call|)
-argument_list|(
 operator|(
 name|similarity
 operator|-
@@ -478,9 +481,9 @@ name|minimumSimilarity
 operator|)
 operator|*
 name|scale_factor
-argument_list|)
 return|;
 block|}
+comment|/** {@inheritDoc} */
 DECL|method|endEnum
 specifier|public
 specifier|final
@@ -493,77 +496,6 @@ name|endEnum
 return|;
 block|}
 comment|/******************************    * Compute Levenshtein distance    ******************************/
-comment|/**    * Finds and returns the smallest of three integers     */
-DECL|method|min
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|min
-parameter_list|(
-name|int
-name|a
-parameter_list|,
-name|int
-name|b
-parameter_list|,
-name|int
-name|c
-parameter_list|)
-block|{
-specifier|final
-name|int
-name|t
-init|=
-operator|(
-name|a
-operator|<
-name|b
-operator|)
-condition|?
-name|a
-else|:
-name|b
-decl_stmt|;
-return|return
-operator|(
-name|t
-operator|<
-name|c
-operator|)
-condition|?
-name|t
-else|:
-name|c
-return|;
-block|}
-DECL|method|initDistanceArray
-specifier|private
-specifier|final
-name|int
-index|[]
-index|[]
-name|initDistanceArray
-parameter_list|()
-block|{
-return|return
-operator|new
-name|int
-index|[
-name|this
-operator|.
-name|text
-operator|.
-name|length
-argument_list|()
-operator|+
-literal|1
-index|]
-index|[
-name|TYPICAL_LONGEST_WORD_IN_INDEX
-index|]
-return|;
-block|}
 comment|/**    *<p>Similarity returns a number that is 1.0f or less (including negative numbers)    * based on how similar the Term is compared to a target term.  It returns    * exactly 0.0f when    *<pre>    *    editDistance&lt; maximumEditDistance</pre>    * Otherwise it returns:    *<pre>    *    1 - (editDistance / length)</pre>    * where length is the length of the shortest term (text or target) including a    * prefix that are identical and editDistance is the Levenshtein distance for    * the two words.</p>    *    *<p>Embedded within this algorithm is a fail-fast Levenshtein distance    * algorithm.  The fail-fast algorithm differs from the standard Levenshtein    * distance algorithm in that it is aborted if it is discovered that the    * minimum distance between the words is greater than some threshold.    *    *<p>To calculate the maximum distance threshold we use the following formula:    *<pre>    *     (1 - minimumSimilarity) * length</pre>    * where length is the shortest term including any prefix that is not part of the    * similarity comparison.  This formula was derived by solving for what maximum value    * of distance returns false for the following statements:    *<pre>    *   similarity = 1 - ((float)distance / (float) (prefixLength + Math.min(textlen, targetlen)));    *   return (similarity> minimumSimilarity);</pre>    * where distance is the Levenshtein distance for the two words.    *</p>    *<p>Levenshtein distance (also known as edit distance) is a measure of similarity    * between two strings where the distance is measured as the number of character    * deletions, insertions or substitutions required to transform one string to    * the other string.    * @param target the target word or phrase    * @return the similarity,  0.0 or less indicates that it matches less than the required    * threshold and 1.0 indicates that the text and target are identical    */
 DECL|method|similarity
 specifier|private
@@ -665,7 +597,7 @@ specifier|final
 name|int
 name|maxDistance
 init|=
-name|getMaxDistance
+name|calculateMaxDistance
 argument_list|(
 name|m
 argument_list|)
@@ -695,25 +627,6 @@ return|return
 literal|0.0f
 return|;
 block|}
-comment|//let's make sure we have enough room in our array to do the distance calculations.
-if|if
-condition|(
-name|d
-index|[
-literal|0
-index|]
-operator|.
-name|length
-operator|<=
-name|m
-condition|)
-block|{
-name|growDistanceArray
-argument_list|(
-name|m
-argument_list|)
-expr_stmt|;
-block|}
 comment|// init matrix d
 for|for
 control|(
@@ -726,44 +639,61 @@ name|i
 operator|<=
 name|n
 condition|;
-name|i
 operator|++
+name|i
 control|)
-name|d
+block|{
+name|p
 index|[
 name|i
-index|]
-index|[
-literal|0
 index|]
 operator|=
 name|i
 expr_stmt|;
+block|}
+comment|// start computing edit distance
 for|for
 control|(
 name|int
 name|j
 init|=
-literal|0
+literal|1
 init|;
 name|j
 operator|<=
 name|m
 condition|;
-name|j
 operator|++
+name|j
 control|)
+block|{
+comment|// iterates through target
+name|int
+name|bestPossibleEditDistance
+init|=
+name|m
+decl_stmt|;
+specifier|final
+name|char
+name|t_j
+init|=
+name|target
+operator|.
+name|charAt
+argument_list|(
+name|j
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
+comment|// jth character of t
 name|d
 index|[
 literal|0
 index|]
-index|[
-name|j
-index|]
 operator|=
 name|j
 expr_stmt|;
-comment|// start computing edit distance
 for|for
 control|(
 name|int
@@ -775,52 +705,21 @@ name|i
 operator|<=
 name|n
 condition|;
-name|i
 operator|++
+name|i
 control|)
 block|{
-name|int
-name|bestPossibleEditDistance
-init|=
-name|m
-decl_stmt|;
-specifier|final
-name|char
-name|s_i
-init|=
+comment|// iterates through text
+comment|// minimum of cell to the left+1, to the top+1, diagonally left and up +(0|1)
+if|if
+condition|(
+name|t_j
+operator|!=
 name|text
 operator|.
 name|charAt
 argument_list|(
 name|i
-operator|-
-literal|1
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|int
-name|j
-init|=
-literal|1
-init|;
-name|j
-operator|<=
-name|m
-condition|;
-name|j
-operator|++
-control|)
-block|{
-if|if
-condition|(
-name|s_i
-operator|!=
-name|target
-operator|.
-name|charAt
-argument_list|(
-name|j
 operator|-
 literal|1
 argument_list|)
@@ -830,10 +729,13 @@ name|d
 index|[
 name|i
 index|]
-index|[
-name|j
-index|]
 operator|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|Math
+operator|.
 name|min
 argument_list|(
 name|d
@@ -842,28 +744,16 @@ name|i
 operator|-
 literal|1
 index|]
-index|[
-name|j
-index|]
 argument_list|,
-name|d
+name|p
 index|[
 name|i
 index|]
-index|[
-name|j
-operator|-
-literal|1
-index|]
+argument_list|)
 argument_list|,
-name|d
+name|p
 index|[
 name|i
-operator|-
-literal|1
-index|]
-index|[
-name|j
 operator|-
 literal|1
 index|]
@@ -878,10 +768,13 @@ name|d
 index|[
 name|i
 index|]
-index|[
-name|j
-index|]
 operator|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|Math
+operator|.
 name|min
 argument_list|(
 name|d
@@ -890,32 +783,20 @@ name|i
 operator|-
 literal|1
 index|]
-index|[
-name|j
-index|]
 operator|+
 literal|1
 argument_list|,
-name|d
+name|p
 index|[
 name|i
-index|]
-index|[
-name|j
-operator|-
-literal|1
 index|]
 operator|+
 literal|1
+argument_list|)
 argument_list|,
-name|d
+name|p
 index|[
 name|i
-operator|-
-literal|1
-index|]
-index|[
-name|j
 operator|-
 literal|1
 index|]
@@ -934,9 +815,6 @@ name|d
 index|[
 name|i
 index|]
-index|[
-name|j
-index|]
 argument_list|)
 expr_stmt|;
 block|}
@@ -945,7 +823,7 @@ comment|//can be found by found by finding the smallest value in a given column.
 comment|//If the bestPossibleEditDistance is greater than the max distance, abort.
 if|if
 condition|(
-name|i
+name|j
 operator|>
 name|maxDistance
 operator|&&
@@ -961,7 +839,24 @@ return|return
 literal|0.0f
 return|;
 block|}
+comment|// copy current distance counts to 'previous row' distance counts: swap p and d
+name|int
+name|_d
+index|[]
+init|=
+name|p
+decl_stmt|;
+name|p
+operator|=
+name|d
+expr_stmt|;
+name|d
+operator|=
+name|_d
+expr_stmt|;
 block|}
+comment|// our last action in the above loop was to switch d and p, so p now
+comment|// actually has the most recent cost counts
 comment|// this will return less than 0.0 when the edit distance is
 comment|// greater than the number of characters in the shorter word.
 comment|// but this was the formula that was previously used in FuzzyTermEnum,
@@ -974,12 +869,9 @@ operator|(
 operator|(
 name|float
 operator|)
-name|d
+name|p
 index|[
 name|n
-index|]
-index|[
-name|m
 index|]
 operator|/
 call|(
@@ -1003,114 +895,7 @@ argument_list|)
 operator|)
 return|;
 block|}
-comment|/**    * Grow the second dimension of the array, so that we can calculate the    * Levenshtein difference.    */
-DECL|method|growDistanceArray
-specifier|private
-name|void
-name|growDistanceArray
-parameter_list|(
-name|int
-name|m
-parameter_list|)
-block|{
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|d
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|d
-index|[
-name|i
-index|]
-operator|=
-operator|new
-name|int
-index|[
-name|m
-operator|+
-literal|1
-index|]
-expr_stmt|;
-block|}
-block|}
 comment|/**    * The max Distance is the maximum Levenshtein distance for the text    * compared to some other value that results in score that is    * better than the minimum similarity.    * @param m the length of the "other value"    * @return the maximum levenshtein distance that we care about    */
-DECL|method|getMaxDistance
-specifier|private
-specifier|final
-name|int
-name|getMaxDistance
-parameter_list|(
-name|int
-name|m
-parameter_list|)
-block|{
-return|return
-operator|(
-name|m
-operator|<
-name|maxDistances
-operator|.
-name|length
-operator|)
-condition|?
-name|maxDistances
-index|[
-name|m
-index|]
-else|:
-name|calculateMaxDistance
-argument_list|(
-name|m
-argument_list|)
-return|;
-block|}
-DECL|method|initializeMaxDistances
-specifier|private
-name|void
-name|initializeMaxDistances
-parameter_list|()
-block|{
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|maxDistances
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|maxDistances
-index|[
-name|i
-index|]
-operator|=
-name|calculateMaxDistance
-argument_list|(
-name|i
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 DECL|method|calculateMaxDistance
 specifier|private
 name|int
@@ -1152,6 +937,7 @@ operator|)
 argument_list|)
 return|;
 block|}
+comment|/** {@inheritDoc} */
 DECL|method|close
 specifier|public
 name|void
@@ -1160,6 +946,16 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|p
+operator|=
+name|d
+operator|=
+literal|null
+expr_stmt|;
+name|searchTerm
+operator|=
+literal|null
+expr_stmt|;
 name|super
 operator|.
 name|close
